@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-04T08:07:42Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 22 ],
-  "count_decinc" : [ -20, +22 ],
+  "timestamp" : "2022-07-04T16:06:50Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 22 ],
+  "count_decinc" : [ -21, +22 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 10 ],
   "uniques_decinc" : [ -9, +10 ]
