@@ -1,3 +1,10 @@
+2022-07-04T16:06:50Z:
+* notice: last 14d: unq all: 7 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 448 1606 / 468 1642
+* notice: next accum: outdated-unq outdated-all / unq all: 448 1606 / 468 1642
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-06-20 2022-07-04]
+
 2022-07-04T08:07:42Z:
 * notice: last 14d: unq all: 7 36
 * notice: prev accum: outdated-unq outdated-all / unq all: 448 1606 / 470 1647
